--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+server<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -11,6 +11,8 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+
+          <h4>PHARRELL WILLIAMS</h4>
 
           <!-- Level 2 'HAPPY' Header -->
 
