--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ server<!doctype html>
 
           <!-- Level 2 'HAPPY' Header -->
 
+          <h2>HAPPY</h2>
+
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
         </div>
