--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@ server<!doctype html>
         <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
 
         <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
 
