--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ server<!doctype html>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
 
       </div>
     </div>
